# docs/swagger.yaml
@@ -3,18 +3,25 @@ definitions:
   controller.Ayam:
     properties:
       _id:
+        example: "123456789"
         type: string
       bobot:
+        example: "123456789"
         type: string
       harga:
+        example: "12.000"
         type: string
       jenis:
+        example: Ayam Saigon
         type: string
       jenis_kelamin:
+        example: Jantan
         type: string
       tinggi:
+        example: "123456789"
         type: string
       umur:
+        example: "123456789"
         type: string
     type: object
 host: be-tbku1-179bbc23801d.herokuapp.com
@@ -67,6 +74,32 @@ paths:
         "500":
           description: Internal Server Error
       summary: Get By ID Data Ayam.
+      tags:
+      - Ayam
+  /ins:
+    post:
+      consumes:
+      - application/json
+      description: Input data ayam.
+      parameters:
+      - description: Payload Body [RAW]
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/controller.Ayam'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/controller.Ayam'
+        "400":
+          description: Bad Request
+        "500":
+          description: Internal Server Error
+      summary: Insert data ayam.
       tags:
       - Ayam
 schemes:
